[package]
name = "proxy-telegram-bot"
version = "0.0.1"
authors = ["Tikitko <bns.6587@gmail.com>"]
edition = "2018"

[dependencies]
config = "0.10"
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }
teloxide = "0.3.1"
teloxide-macros = "0.3.2"
